debug-scripts/cloudsqlproxy-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsql-proxy
  namespace: odi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsql-proxy
  template:
    metadata:
      labels:
        app: cloudsql-proxy
    spec:
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.2
        command: [
          "/cloud_sql_proxy",
          "-instances=techplain-hub:us-central1:odi-dev-mysql-terra=tcp:3306",
          "-credential_file=/secrets/credentials.json",
          "-verbose"
        ]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: credentials
          mountPath: /secrets
          readOnly: true
      - name: debug
        image: ubuntu:latest
        command: ["/bin/sh", "-c", "apt-get update && apt-get install -y net-tools telnet dnsutils iputils-ping mysql-client && tail -f /dev/null"]
      volumes:
      - name: credentials
        secret:
          secretName: odi-dev-cloudsql-creds #cloudsql-proxy-sa
---
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
  namespace: odi-dev
spec:
  selector:
    app: cloudsql-proxy
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
