debug-scripts/debug-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-netcat
  namespace: odi-dev
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "infinity"]
    resources:
      limits:
        cpu: "500m"
        memory: "128Mi"
      requests:
        cpu: "250m"
        memory: "64Mi"
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
  restartPolicy: Never
