debug-scripts/debug-pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-pod-sql-service
  namespace: odi-dev
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
