debug-scripts/ip-masq-agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ip-masq-agent
  namespace: kube-system
  labels:
    k8s-app: ip-masq-agent
spec:
  selector:
    matchLabels:
      k8s-app: ip-masq-agent
  template:
    metadata:
      labels:
        k8s-app: ip-masq-agent
    spec:
      serviceAccountName: default
      containers:
      - name: ip-masq-agent
        image: gcr.io/google-containers/ip-masq-agent:1.1.0
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 20m
            memory: 20Mi
        volumeMounts:
        - name: config-volume
          mountPath: /config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: ip-masq-agent
