debug-scripts/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mysql-debug
  namespace: odi-dev
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306   
      protocol: TCP
  selector:
    app: mysql-debug
